syntax = "proto3";

package containerd.services.events.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/containerd/containerd/api/services/events/v1;events";

service Events {
	rpc Stream(StreamEventsRequest) returns (stream Envelope);
}

message Envelope {
	google.protobuf.Timestamp timestamp = 1 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
	string topic = 2;
	google.protobuf.Any event = 3;
}

message StreamEventsRequest {
  repeated string filters = 1;
}
